--- a/Project 2/package.json
+++ b/Project 2/package.json
@@ -9,7 +9,8 @@
     "publisher": "node publisher.js",
     "server": "node server.js",
     "client": "node client.js",
-    "compatibility": "node compatibility.js"
+    "compatibility": "node compatibility.js",
+    "queue": "node queue.js"
   },
   "author": "",
   "license": "ISC",
