--- a/Project 5/package.json
+++ b/Project 5/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start:prod": "node dist/index.js",
+    "start": "node dist/index.js",
+    "start:prod": "tsc && node dist/index.js",
     "start:dev": "ts-node --esm src/index.ts"
   },
   "author": "",
