--- a/Project 1/package.json
+++ b/Project 1/package.json
@@ -9,7 +9,8 @@
     "publisher": "node publisher.js",
     "server": "node server.js",
     "client": "node client.js",
-    "queue": "node queue.js"
+    "queue": "node queue.js",
+    "pairs": "node pairs.js"
   },
   "author": "",
   "license": "ISC",
