--- a/Project 1/package.json
+++ b/Project 1/package.json
@@ -10,7 +10,9 @@
     "server": "node server.js",
     "client": "node client.js",
     "queue": "node queue.js",
-    "pairs": "node pairs.js"
+    "pairs": "node pairs.js",
+    "router": "node router.js",
+    "dealers": "node dealers.js"
   },
   "author": "",
   "license": "ISC",
