--- a/Project 1/package.json
+++ b/Project 1/package.json
@@ -12,7 +12,10 @@
     "queue": "node queue.js",
     "pairs": "node pairs.js",
     "router": "node router.js",
-    "dealers": "node dealers.js"
+    "dealers": "node dealers.js",
+    "broker": "node broker.js",
+    "broker1": "node broker1.js",
+    "monitor": "node monitor.js"
   },
   "author": "",
   "license": "ISC",
